feat: annotation correctly captured but just for core project